--- a/GamePriceFinder/GamePriceFinder.csproj
+++ b/GamePriceFinder/GamePriceFinder.csproj
@@ -7,8 +7,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="NuuvemPriceFinder.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <COMReference Include="{215d64d2-031c-33c7-96e3-61794cd1ee61}">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>4</VersionMinor>
+      <VersionMajor>2</VersionMajor>
+      <Guid>215d64d2-031c-33c7-96e3-61794cd1ee61</Guid>
+    </COMReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="EpicGamesStoreNET" Version="1.0.2" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RevolutionaryLib\RevolutionaryLib.csproj" />
   </ItemGroup>
 
 </Project>
