Organização do código, ajuste para busca dos preços em listas.

--- a/GamePriceFinder/GamePriceFinder.csproj
+++ b/GamePriceFinder/GamePriceFinder.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ScriptEngine.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="NuuvemPriceFinder.js" />
   </ItemGroup>
 
