Price search on the stores Steam, Nuuvem, Epic Games and Playstation Store. (#1)
* Ajustes para adicionar API Epic Games.

* Adição do gitignore.

* Adição da biblioteca de busca na Epic, tratamento para busca do preço em reais, criação de método para busca na Epic, ajustes .gitignore.

* Criação de classes separadas para chamadas http, tratamento do retorno dos preços das APIs, criação de classes para composição da classe de jogo principal.

* Atualização gitignore.

* Integrando com a API da nuuvem.

* Vasculhando html pelo preço e nome do jogo na api da nuuvem.

* Percorrendo html para coleta de preço da nuuvem.

* Organização do código, ajuste para busca dos preços em listas.

* Buscando o preço da playstation store e exibindo na tela o preço de todas as lojas até agora.

* Organização do código para apresentação de Engenharia.

* Remoção de código não utilizado.

--- a/GamePriceFinder/GamePriceFinder.csproj
+++ b/GamePriceFinder/GamePriceFinder.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,7 +7,30 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="ScriptEngine.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="NuuvemPriceFinder.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <COMReference Include="{215d64d2-031c-33c7-96e3-61794cd1ee61}">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>4</VersionMinor>
+      <VersionMajor>2</VersionMajor>
+      <Guid>215d64d2-031c-33c7-96e3-61794cd1ee61</Guid>
+    </COMReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="EpicGamesStoreNET" Version="1.0.2" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RevolutionaryLib\RevolutionaryLib.csproj" />
   </ItemGroup>
 
 </Project>
