--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,5 @@ project.lock.json
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
+
+GamePriceFinder/.local-chromium/Win64-970485/chrome-win/chrome.dll
