--- a/GamePriceFinder/appsettings.json
+++ b/GamePriceFinder/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MySqlConnection": {
+    "MySqlConnectionString": "Server=localhost;Database=buscajogosplus;Uid=root;Pwd=;"
+  }
 }
