Database tests, documentation, exclusion of unused classes, exclusion of test project.

--- a/GamePriceFinder/appsettings.json
+++ b/GamePriceFinder/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "MySqlConnection": {
-    "MySqlConnectionString": "Server=localhost;Database=buscajogosplus;Uid=root;Pwd=;"
+    "MySqlConnectionString": "Server=localhost;Database=BUSCAJOGOS;Uid=root;Pwd=;"
   }
 }
