--- a/GamePriceFinder/GamePriceFinder.csproj
+++ b/GamePriceFinder/GamePriceFinder.csproj
@@ -4,6 +4,8 @@
 		<TargetFramework>net6.0-windows10.0.22000.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<DocumentationFile>C:\Users\Ricardo\Documents\FATEC\TG\BuscaJogosPlus\Documentation\documentation.xml</DocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -25,6 +27,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="EpicGamesStoreNET" Version="1.0.2" />
+		<PackageReference Include="EWSoftware.SHFB" Version="2022.2.6" />
 		<PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.5">
 		  <PrivateAssets>all</PrivateAssets>
