--- a/GamePriceFinder/GamePriceFinder.csproj
+++ b/GamePriceFinder/GamePriceFinder.csproj
@@ -5,7 +5,7 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
-		<DocumentationFile>C:\Users\Ricardo\Documents\FATEC\TG\BuscaJogosPlus\Documentation\documentation.xml</DocumentationFile>
+		<DocumentationFile>C:\Users\Ricardo\Documents\FATEC\TG\BuscaJogosPlus\Documentation\api_documentation.xml</DocumentationFile>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -36,10 +36,6 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="6.0.1" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Design" Version="1.1.2" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<ProjectReference Include="..\RevolutionaryLib\RevolutionaryLib.csproj" />
 	</ItemGroup>
 
 </Project>
