Saving video url to display on front.

--- a/GamePriceFinder/appsettings.json
+++ b/GamePriceFinder/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "MySqlConnection": {
     "MySqlConnectionString": "Server=localhost;Database=BUSCAJOGOS;Uid=root;Pwd=;"
+  },
+  "YoutubeApiKey": {
+    "ApiKey": "AIzaSyCxz8k9UxlZcMxTmu-f7z35y_ahqSNKCCA"
   }
 }
